--- a/force-app/main/default/classes/VisitResultsRemote.cls
+++ b/force-app/main/default/classes/VisitResultsRemote.cls
@@ -57,6 +57,17 @@ public inherited sharing class VisitResultsRemote {
         }
     }
 
+    @AuraEnabled
+    public static List<VisitResultsService.VisitResultWrapper> getVisitResultWrappersForDashboard() {
+
+        try {
+            return ((VisitResultsService) ClassFactory.newInstance(VisitResultsService.class)).getVisitResultWrappersForDashboard();
+        } catch (Exception e) {
+            AuraHelper.throwException(e);
+        }
+        return null;
+    }
+
     public class InitDataWrapper {
 
         @AuraEnabled
