--- a/force-app/main/default/classes/StudyActionsPI.cls
+++ b/force-app/main/default/classes/StudyActionsPI.cls
@@ -32,6 +32,7 @@ public class StudyActionsPI extends StudyActions{
     }
     
     public StudyActionsPI(Clinical_Trial_Profile__c study, Study_Site__c studySite, HCP_Enrollment__c hcpEnrollment, Participant_Enrollment__c pe){
+
         super(study,studySite, hcpEnrollment, CommunityService.USER_MODE_PI);
     
         //init reasons:
@@ -222,13 +223,39 @@ public class StudyActionsPI extends StudyActions{
                         tcAcceptanceRequiredReason
                 }
         ));
+
+
+        actions.put(ACT_MANAGE_REFERRALS_BY_SS, new Action(
+                ACT_MANAGE_REFERRALS_BY_SS,
+                LABEL_MANAGE_REFERRALS_BY_SS,
+                null,
+                new List<DisableReason>{
+                        studySiteOnHoldReason,
+                        studyNoLongerEnrollingReason,
+                        manageReferralsStatusesReason
+                }
+        ));
+
+        actions.put(ACT_MANAGE_REFERRING_CLINICS_BY_SS, new Action(
+                ACT_MANAGE_REFERRING_CLINICS_BY_SS,
+                LABEL_MANAGE_REFERRING_CLINICS_BY_SS,
+                null,
+                new List<DisableReason>{
+                        studySiteOnHoldReason,
+                        studyNoLongerEnrollingReason,
+                        manageReferralsStatusesReason
+                }
+        ));
         
         //init study item actions list
+        studySitePiActions.add(actions.get(ACT_MANAGE_REFERRALS_BY_SS));
+        studySitePiActions.add(actions.get(ACT_MANAGE_REFERRING_CLINICS_BY_SS));
+
         if(manageReferralsStatuses.contains(studySite.Override_PI_Referral_Status__c)){
             studyListViewItemActions.add(actions.get(ACT_MANAGE_REFERRALS));
             studyListViewItemActions.add(actions.get(ACT_MANAGE_REFERRING_CLINICS));
         }
-        
+
         if(openToReceiveReferralsStatuses.contains(studySite.Override_PI_Referral_Status__c)){
             if(isTCAcceptanceRequired){
                 studyListViewItemActions.add(actions.get(ACT_VIEW_TC));
