--- a/force-app/main/default/classes/StudyDetailAboutStudyRemote.cls
+++ b/force-app/main/default/classes/StudyDetailAboutStudyRemote.cls
@@ -101,9 +101,14 @@ public without sharing class StudyDetailAboutStudyRemote {
     private static void setStatusPI(Id trialId, String status, String piPaysForReferralActivity){
         List<Study_Site__c> studySites = StudySiteService.getStudySiteForPIByTrialId(trialId);
         if(studySites.size() == null) throw new AuraHandledException('Data not found');
-        studySites[0].Override_PI_Referral_Status__c = status;
-        if(piPaysForReferralActivity != null) studySites[0].PI_Pays_for_Referral_Activity__c = piPaysForReferralActivity;
-        update studySites[0];
+        for (Integer i = 0; i < studySites.size(); i++) {
+            if(studySites[i].Override_PI_Referral_Status__c != status && studySites[i].Override_PI_Referral_Status__c != StudySiteService.PI_S_DEACTIVATED_A) {
+                studySites[i].Override_PI_Referral_Status__c = status;
+                if (piPaysForReferralActivity != null) studySites[i].PI_Pays_for_Referral_Activity__c = piPaysForReferralActivity;
+            }
+        }
+       // studySites[0].Override_PI_Referral_Status__c = status;
+        update studySites;
     }
 
 }
