--- a/force-app/main/default/classes/Test_BaseCRCPCommunity.cls
+++ b/force-app/main/default/classes/Test_BaseCRCPCommunity.cls
@@ -862,15 +862,16 @@ private class Test_BaseCRCPCommunity {
 
     @IsTest
     static void checkDummyAccountsTest(){
+        String accountName = 'Dummy Account For Location Check '+ UserInfo.getUserId();
         Account acc = new Account(BillingStreet = 'Test Street',
                                   BillingCountry = 'United States',
                                   BillingCity = 'Test City');
         Test.startTest();
             StudyListViewController.checkAccountGeolocation(JSON.serialize(acc));
-            List<Account> accListForCheck = [SELECT Id FROM Account WHERE Name='Dummy Account For Location Check'];
+            List<Account> accListForCheck = [SELECT Id FROM Account WHERE Name=:accountName];
             System.assertEquals(1,accListForCheck.size());
             StudyListViewController.returnAndRemoveAccount();
-            List<Account> accListForCheckAfterDel = [SELECT Id FROM Account WHERE Name='Dummy Account For Location Check'];
+            List<Account> accListForCheckAfterDel = [SELECT Id FROM Account WHERE Name=:accountName];
             System.assertEquals(0,accListForCheckAfterDel.size());
         Test.stopTest();
     }
