PSE Creation for all licenses

--- a/force-app/main/default/classes/ParticipantEnrollmentTriggerHandler.cls
+++ b/force-app/main/default/classes/ParticipantEnrollmentTriggerHandler.cls
@@ -88,6 +88,7 @@ public without sharing class ParticipantEnrollmentTriggerHandler {
                         Clinical_Trial_Profile__r.Suppress_Participant_Emails__c,
                         Clinical_Trial_Profile__r.Shareback_Settings_On_Participant_Level__c,
                         Clinical_Trial_Profile__r.Visit_Data_Shareback__c,
+                        Clinical_Trial_Profile__r.Participating_in_Patient_Portal__c,
                         Clinical_Trial_Profile__r.NCT_Number__c
                 FROM Study_Site__c
                 WHERE Id IN: ssIds
@@ -210,11 +211,12 @@ public without sharing class ParticipantEnrollmentTriggerHandler {
                     Id hcpContact;
                     if(hcpe != null) hcpContact = hcpe.HCP_Contact__c;
                     toCreateUser.put(participant.Contact__c, hcpContact);
-                    alertsForInsert.add(new Alert__c(
-                            Contact__c = participant.Contact__c,
-                            Alert_Code__c = 'Welcome_To_The_PH'
-                    ));
-
+                    if(ss.Clinical_Trial_Profile__r.Participating_in_Patient_Portal__c == 'Yes'){
+                        alertsForInsert.add(new Alert__c(
+                                Contact__c = participant.Contact__c,
+                                Alert_Code__c = 'Welcome_To_The_PH'
+                        ));
+                    }
                 }else{
                     System.debug('NOTIFY USER');
                     if(hcpe != null){
